# ai_engineering_kokchun_giang_de24

./: .gitignore  README.md  pyproject.toml
03_gemini/: gemini_api_intro.ipynb
04_pydantic/: pydantic.ipynb  validation_without_pydantic.ipynb
05_pydantic_gemini/: README.md  b_gemini_pydantic_more_robust.ipynb
06_fastapi_crud/: api.py  constants.py  data_processing.py  try_my_api.ipynb
07_b_pydanticai_fastapi/: agents.py  data_models.py  explorations.ipynb  movies_api.py  setup_db.py  utils.py
07_b_pydanticai_fastapi/data/: movies.duckdb
07_pydantic_ai/: pydanticai_fundamentals.ipynb
08_pydanticai_chatbot/: chat.py  chat_eda.ipynb  frontend.py
09_lancedb_vector_database/: lancedb_explorations.ipynb
09_lancedb_vector_database/vector_database/animals.lance/_transactions/: 0-dd97f179-07b2-46f5-a3c4-08f8fafad125.txn
10_rag/: api.py  explorations.ipynb  ingestion.py  pdfs_to_text.py
10_rag/backend/: constants.py  data_models.py  rag.py
10_rag/frontend/: app.py
